tests/algorithms/x/CS/maths/factors.cs
// Generated by Mochi 0.10.59 on 2025-08-07 09:39 +0700
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text.Json;
using System.Numerics;
using System.Collections;

class Program {
    static bool seededNow = false;
    static long nowSeed = 0;
    static long _now() {
        if (!seededNow) {
            var s = Environment.GetEnvironmentVariable("MOCHI_NOW_SEED");
            if (long.TryParse(s, out var v)) {
                nowSeed = v;
                seededNow = true;
            }
        }
        if (seededNow) {
            nowSeed = unchecked(nowSeed * 1664525 + 1013904223);
            nowSeed %= 9223372036854775783L;
            if (nowSeed < 0) nowSeed += 9223372036854775783L;
            return nowSeed;
        }
        return DateTime.UtcNow.Ticks / 100;
    }
    static long _mem() {
        return GC.GetTotalAllocatedBytes(true);
    }
    static long _len(object v) {
        if (v is Array a) return a.Length;
        if (v is string s) return s.Length;
        if (v is System.Collections.ICollection c) return c.Count;
        return Convert.ToString(v).Length;
    }
    static long _mod(long a, long b) {
        if (b == 0) return 0;
        var r = a % b;
        if ((r < 0 && b > 0) || (r > 0 && b < 0)) r += b;
        return r;
    }
    static string _substr(string s, long start, long end) {
        if (start < 0) start = 0;
        if (end < 0) end = 0;
        if (start > s.Length) start = s.Length;
        if (end > s.Length) end = s.Length;
        if (start > end) start = end;
        return s.Substring((int)start, (int)(end - start));
    }
    static string _fmt(object v) {
        if (v is Array a) {
            var parts = new List<string>();
            foreach (var x in a) parts.Add(_fmt(x));
            return "[" + string.Join(", ", parts) + "]";
        }
        if (v is System.Collections.IDictionary d) {
            var keys = new List<string>();
            foreach (var k in d.Keys) keys.Add(k.ToString());
            keys.Sort();
            var parts = new List<string>();
            foreach (var k in keys) parts.Add(k + ":" + _fmt(d[k]));
            return "map[" + string.Join(", ", parts) + "]";
        }
        if (v is System.Collections.IEnumerable e && !(v is string)) {
            var parts = new List<string>();
            foreach (var x in e) parts.Add(_fmt(x));
            return string.Join(", ", parts);
        }
        if (v is string s) return "\"" + s.Replace("\"", "\\\"") + "\"";
        if (v is bool b) return b ? "true" : "false";
        return Convert.ToString(v);
    }
    static string _fmtStr(object v) {
        if (v is Array a) {
            var parts = new List<string>();
            foreach (var x in a) parts.Add(_fmtStr(x));
            return "[" + string.Join(" ", parts) + "]";
        }
        if (v is System.Collections.IDictionary d) {
            var keys = new List<string>();
            foreach (var k in d.Keys) keys.Add(k.ToString());
            keys.Sort();
            var parts = new List<string>();
            foreach (var k in keys) parts.Add(k + ":" + _fmtStr(d[k]));
            return "map[" + string.Join(" ", parts) + "]";
        }
        if (v is System.Collections.IEnumerable e && !(v is string)) {
            var parts = new List<string>();
            foreach (var x in e) parts.Add(_fmtStr(x));
            return string.Join(" ", parts);
        }
        if (v is string s) return "\"" + s.Replace("\"", "\\\"") + "\"";
        if (v is bool b) return b ? "true" : "false";
        return Convert.ToString(v);
    }
    public static string _fmtTop(object v) {
        if (v is Array a && a.Length > 0 && a.GetValue(0) is Array) {
            var parts = new List<string>();
            foreach (var x in a) parts.Add(_fmt(x));
            return string.Join(" ", parts);
        }
        if (v is string s) return s;
        return _fmt(v);
    }
    public static long[] reverse(long[] xs_0) {
        long[] res_1 = new long[]{};
        long i_2 = (xs_0.Length - 1);
        while ((i_2 >= 0)) {
            res_1 = (Enumerable.ToArray(Enumerable.Append<long>(res_1, xs_0[(int)(i_2)])));
            i_2 = (i_2 - 1);
        };
        return res_1;
    }

    public static long[] factors_of_a_number(long num_3) {
        long[] facs_4 = new long[]{};
        if ((num_3 < 1)) {
            return facs_4;
        };
        long[] small_5 = new long[]{};
        long[] large_6 = new long[]{};
        long i_7 = 1;
        while (((i_7 * i_7) <= num_3)) {
            if ((_mod(num_3, i_7) == 0)) {
                small_5 = (Enumerable.ToArray(Enumerable.Append<long>(small_5, i_7)));
                long d_8 = (num_3 / i_7);
                if ((d_8 != i_7)) {
                    large_6 = (Enumerable.ToArray(Enumerable.Append<long>(large_6, d_8)));
                }
            }
            i_7 = (i_7 + 1);
        };
        facs_4 = (Enumerable.ToArray(Enumerable.Concat(small_5, Program.reverse(large_6))));
        return facs_4;
    }

    public static void run_tests() {
        if ((Program.factors_of_a_number(1) != new long[]{1})) {
            throw new Exception("case1 failed");
        };
        if ((Program.factors_of_a_number(5) != new long[]{1, 5})) {
            throw new Exception("case2 failed");
        };
        if ((Program.factors_of_a_number(24) != new long[]{1, 2, 3, 4, 6, 8, 12, 24})) {
            throw new Exception("case3 failed");
        };
        if ((Program.factors_of_a_number(-24) != new object[]{})) {
            throw new Exception("case4 failed");
        };
    }

    public static void main() {
        Program.run_tests();
        Console.WriteLine(Program._fmtTop(_fmtStr(Program.factors_of_a_number(24))));
    }

    static void Main() {
        {
            var __memStart = _mem();
            var __start = _now();
            Program.main();
            var __end = _now();
            var __memEnd = _mem();
            var __dur = (__end - __start);
            if (__dur <= 0) __dur = 1;
            var __memDiff = __memEnd - __memStart;
            if (__memDiff <= 0) __memDiff = __memEnd;
            Console.WriteLine("{\"name\":\"main\",\"duration_us\":" + __dur + ",\"memory_bytes\":" + __memDiff + "}");
        }
    }
}
